④♌ and ⑤♌ make more sense.

--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -222,7 +222,9 @@ Similarly to how creatures often evolve into crabs, machine learning algorithms 
 
     TODO: We need to justify:
 
-    TODO: - See that autoencoders without input eventually collapse loss to 0, whereas self-determined targets keep up the diversity so there's always something to learn (sure hope so, otherwise, we have big holes in our "diversity" claims) ("the learning of data is already well-studied, so in this section, we try to learn without data; this no-inputs regime can highlight which approaches need diversity in their data and which generate their own diversity");
+    TODO: - The grand challenge: demonstrating that non-trivial structures arise from training with no inputs. Do we have to learn t-SNE for this? How else would we analyze seemingly-random noise?
+
+    TODO: - See that autoencoders without input eventually collapse loss to 0, whereas self-determined targets keep up the diversity so there's always something to learn (sure hope so, otherwise, we have big holes in our "diversity" claims) ("the learning of data is already well-studied, so in this section, we try to learn without data; this no-inputs regime can highlight which approaches need diversity in their data and which generate their own diversity"); --- doesn't seem to pan out? Maybe? Damd it, should really run everything to completion.
 
     TODO: - Few targets, because the most recent results on a similar architecture suggest interesting things happening with many targets (so, a plot of what happens as we increase the target count, from 1 to MAX);
 
