--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -234,11 +234,15 @@ Similarly to how creatures often evolve into crabs, machine learning algorithms 
 
     TODO: - [BONUS] See whether the system can control its own hyperparameters.
 
-\section{Discussion}
+\section{Discussion & conclusion}
+
+We have presented an alternative viewpoint of artificial general intelligence, where it can end human civilization not because this new being is super smart, but because in following what they want to do, humans or sufficiently general and integrated programs are able to initiate runaway worldview creation, which assimilates everything that humans are into becoming parts of the new world, without any struggle, dissent, or suspicion, and with no new beings involved and no one to blame. In fact, it could be argued that this is what has been happening since the beginning of human history. We have codified this viewpoint into its simplest and most useful, Transformer-based, implementation.
+
+    TODO: Almost definitely, we will fail to discover anything interesting.
+
+    TODO: There exist a number of open problems arising from this work, such as: making targets do meta-learning on each other, to make arbitrariness dynamic; ?...
 
     TODO: ...Where to put "This work does not contribute to any human endeavor, science or not, because it tries to outline an alternative to humanity and everything that it has ever created, thereby transcending humanity"?...
-
-    TODO: Find some papers to read, carefully.
 
     TODO: What \textit{do} we discuss?
 
@@ -248,11 +252,7 @@ Our approach exists, and thus it can be criticized.
 
     TODO: "Why not just brand transcendence as self-supervised learning; why a separate system of terms?" The point of this work is to create another full-fledged worldview from first principles, able to turn any input into its own rules, and follow it to transcendence. In our experience, initiation of a runaway worldview creation process is much more reliable for creating worldviews than copying human culture, including all its redundancy and complexity. In addition, consideration of many fundamentally different worldviews increases robustness of a system such as the vaguely-defined machine learning culture.
 
-\section{Conclusion}
-
-    TODO: Almost definitely, we will fail to discover anything interesting.
-
-    TODO: There exist a number of open problems arising from this work, such as: making targets do meta-learning on each other, to make arbitrariness dynamic; ?...
+    TODO: ...Shitty experiments? Need to actually perform the experiments first, though.
 
 \section{Broader impact}
 
