--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -236,7 +236,7 @@ Similarly to how creatures often evolve into crabs, machine learning algorithms 
 
 \section{Discussion & conclusion}
 
-We have presented an alternative viewpoint of artificial general intelligence, where it can end human civilization not because this new being is super smart, but because in following what they want to do, humans or sufficiently general and integrated programs are able to initiate runaway worldview creation, which assimilates everything that humans are into becoming parts of the new world, without any struggle, dissent, or suspicion, and with no new beings involved and no one to blame. In fact, it could be argued that this is what has been happening since the beginning of human history. We have codified this viewpoint into its simplest and most useful, Transformer-based, implementation.
+We have presented an alternative viewpoint of artificial general intelligence which we have named TGBA, where it can end human civilization not because this new being is super smart, but because in following what they want to do, humans or sufficiently general and integrated programs are able to initiate runaway worldview creation, which assimilates everything that humans are into becoming parts of the new world, without any struggle, dissent, or suspicion, and with no new beings involved and no one to blame. In fact, it could be argued that this is what has been happening since the beginning of human history. We have codified this viewpoint into its simplest and most useful, Transformer-based, implementation.
 
     TODO: Almost definitely, we will fail to discover anything interesting.
 
