`display` has a step size now.

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,21 @@
+@article{10.1145/947955.1083808,
+author = {Perlis, Alan J.},
+title = {Special Feature: Epigrams on Programming},
+year = {1982},
+issue_date = {September 1982},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {17},
+number = {9},
+issn = {0362-1340},
+url = {https://doi.org/10.1145/947955.1083808},
+doi = {10.1145/947955.1083808},
+journal = {SIGPLAN Not.},
+month = sep,
+pages = {7–13},
+numpages = {7}
+}
+
 @book{fodor1983modularity,
   title={The modularity of mind},
   author={Fodor, Jerry A},
